--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ extra_css:
 site_url: https://chanel.nicholaslyz.com/
 nav:
   - Home: index.md
-  - Trading Bot Core: trading-bot-core.md
+  - Trading Bot: trading-bot.md
   - Posts:
     - 9-10 Apr 2022 Lazarus Camping: posts/2022-04-09-lazarus-camping.md
 markdown_extensions:
