Added france trip stuff

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,14 +12,12 @@ theme:
   features:
     - navigation.instant
     - header.autohide
-extra_css:
-  - stylesheets/code.css
 site_url: https://chanel.nicholaslyz.com/
 nav:
   - Home: index.md
   - Trading Bot: trading-bot.md
   - Posts:
-    - 7-10 May 2022 Ireland Hiking: posts/2022-05-ireland-hiking.md
+    - 7-10 May 2022 France (Nice) Hiking: posts/2022-05-france-nice-hiking.md
     - 9-10 Apr 2022 Lazarus Camping: posts/2022-04-09-lazarus-camping.md
 markdown_extensions:
   - abbr
