Renamed posts to trips, changed README.md and index page descriptions.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
   - Home: index.md
   - Story: story.md
   - Trading Bot: trading-bot.md
-  - Posts:
+  - Trips:
     - 13-19 Nov 2022 Vietnam Camping: posts/2022-08-22-vietnam.md
     - 23-25 Oct 2022 Bintan: posts/2022-09-15-bintan.md
     - 7-10 May 2022 France (Nice) Hiking: posts/2022-05-france-nice-hiking.md
