update workflow for notifications on commit

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,5 @@
-name: Python package
+name: Build and deploy
+
 on:
   push:
     branches:
@@ -27,9 +28,21 @@ jobs:
         run: |
           mkdocs build
 
-
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
             branch: gh-pages # The branch the action should deploy to.
             folder: site # The folder the action should deploy.
+
+      - name: Notify Relationship Manager
+        env:
+          BOT_TOKEN: ${{secrets.BOT_TOKEN}}
+          CHAT_ID: ${{secrets.CHAT_ID}}
+        run: >
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" \
+          -d "parse_mode=HTML" \
+          --data-urlencode "text=<b>chanel.nicholaslyz.com</b>
+          New commit by <b>${{github.event.head_commit.author.name}}</b>:
+          
+          <i>${{github.event.head_commit.message}}</i>" \
+          "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
