--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,9 +18,9 @@ nav:
   - Story: story.md
   - Trading Bot: trading-bot.md
   - Trips:
-    - 13-19 Nov 2022 Vietnam Camping: posts/2022-08-22-vietnam.md
+    - 13-19 Nov 2022 Vietnam: posts/2022-08-22-vietnam.md
     - 23-25 Oct 2022 Bintan: posts/2022-09-15-bintan.md
-    - 7-10 May 2022 France (Nice) Hiking: posts/2022-05-france-nice-hiking.md
+    - 7-10 May 2022 Nice, France Hiking: posts/2022-05-france-nice-hiking.md
     - 9-10 Apr 2022 Lazarus Camping: posts/2022-04-09-lazarus-camping.md
 markdown_extensions:
   - abbr
