--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,11 +38,7 @@ jobs:
         env:
           BOT_TOKEN: ${{secrets.BOT_TOKEN}}
           CHAT_ID: ${{secrets.CHAT_ID}}
-        run: >
-          curl -X POST --data-urlencode "chat_id=$CHAT_ID" \
-          -d "parse_mode=HTML" \
-          --data-urlencode "text=<b>chanel.nicholaslyz.com</b>
-          New commit by <b>${{github.event.head_commit.author.name}}</b>:
-          
-          <i>${{github.event.head_commit.message}}</i>" \
-          "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
+        run: |
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" -d "parse_mode=Markdown" --data-urlencode "text=*chanel.nicholaslyz.com*
+          New commit by *${{github.event.head_commit.author.name}}*" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" --data-urlencode "text=${{github.event.head_commit.message}}_" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
