--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,4 +41,4 @@ jobs:
         run: |
           curl -X POST --data-urlencode "chat_id=$CHAT_ID" -d "parse_mode=Markdown" --data-urlencode "text=*chanel.nicholaslyz.com*
           New commit by *${{github.event.head_commit.author.name}}*" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
-          curl -X POST --data-urlencode "chat_id=$CHAT_ID" --data-urlencode "text=${{github.event.head_commit.message}}_" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" --data-urlencode "text=${{github.event.head_commit.message}}" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
