Added shanmugan video

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - 23-25 Oct 2022 Bintan: posts/2022-09-15-bintan.md
     - 7-10 May 2022 Nice, France Hiking: posts/2022-05-france-nice-hiking.md
     - 9-10 Apr 2022 Lazarus Camping: posts/2022-04-09-lazarus-camping.md
+  - Shanmugan Video: posts/2022-12-28-shanmugan-transcript.md
 markdown_extensions:
   - abbr
   - attr_list
