--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - 7-10 May 2022 Nice, France Hiking: posts/2022-05-france-nice-hiking.md
     - 9-10 Apr 2022 Lazarus Camping: posts/2022-04-09-lazarus-camping.md
   - Shanmugan Video: posts/2022-12-28-shanmugan-transcript.md
+  - Sweet Potatoes: posts/2023-02-06-sweet-potatoes.md
 markdown_extensions:
   - abbr
   - attr_list
