add japan hiking info

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - Shanmugan Video: posts/2022-12-28-shanmugan-transcript.md
     - Sweet Potatoes: posts/2023-02-06-sweet-potatoes.md
   - Trips:
+    - Jun 2023 Japan Hiking Planning: trips/2023-04-07-japan-hiking.md
     - 13-19 Nov 2022 Vietnam: trips/2022-08-22-vietnam.md
     - 23-25 Oct 2022 Bintan: trips/2022-09-15-bintan.md
     - 7-10 May 2022 Nice, France Hiking: trips/2022-05-france-nice-hiking.md
