add japan kamikochi hiking

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,11 +22,11 @@ nav:
     - Shanmugan Video: posts/2022-12-28-shanmugan-transcript.md
     - Sweet Potatoes: posts/2023-02-06-sweet-potatoes.md
   - Trips:
-    - Jun 2023 Japan Hiking Planning: trips/2023-04-07-japan-hiking.md
-    - 13-19 Nov 2022 Vietnam: trips/2022-08-22-vietnam.md
-    - 23-25 Oct 2022 Bintan: trips/2022-09-15-bintan.md
-    - 7-10 May 2022 Nice, France Hiking: trips/2022-05-france-nice-hiking.md
-    - 9-10 Apr 2022 Lazarus Camping: trips/2022-04-09-lazarus-camping.md
+    - "2023 Jun: Kamikochi, Japan": trips/2023-04-07-japan-hiking.md
+    - "2022 Nov: Vietnam": trips/2022-08-22-vietnam.md
+    - "2022 Oct: Bintan": trips/2022-09-15-bintan.md
+    - "2022 May: Nice, France": trips/2022-05-france-nice-hiking.md
+    - "2022 Apr: Lazarus Island": trips/2022-04-09-lazarus-camping.md
 markdown_extensions:
   - abbr
   - attr_list
