add kumano kodo hiking

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ theme:
     - toc.integrate
 
 nav:
+  - Home: index.md
   - Blog:
       - blog/index.md
   - Stories:
@@ -53,7 +54,6 @@ nav:
           - trading-bot/guides/running-backtest.md
       - Trading Journal:
           - trading-bot/trading-journal/2023-07-21-chfjpy-cfd.md
-          - trading-bot/trading-journal/2023-12-31-review.md
       - Notes:
           - trading-bot/notes/forex.md
           - trading-bot/notes/risk-management.md
@@ -65,7 +65,7 @@ markdown_extensions:
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
@@ -87,4 +87,3 @@ plugins:
       post_excerpt: required
       categories_allowed:
         - Trips
-        - DIY
