--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,3 +33,12 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: site # The folder the action should deploy.
+
+      - name: Notify Relationship Manager
+        env:
+          BOT_TOKEN: ${{secrets.BOT_TOKEN}}
+          CHAT_ID: ${{secrets.CHAT_ID}}
+        run: |
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" -d "parse_mode=Markdown" --data-urlencode "text=*chanel.nicholaslyz.com*
+          New commit by *${{github.event.head_commit.author.name}}*" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
+          curl -X POST --data-urlencode "chat_id=$CHAT_ID" --data-urlencode "text=${{github.event.head_commit.message}}" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
