--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -2,9 +2,9 @@ name: Check Markdown links
 
 on:
   workflow_dispatch:
-  schedule:
-    # Run weekly at 00:00 on Sunday
-    - cron: "0 0 * * 0"
+  # schedule:
+  #   # Run weekly at 00:00 on Sunday
+  #   - cron: "0 0 * * 0"
 
 jobs:
   markdown-link-check:
