--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,10 @@
 [project]
 name = "chanel"
 version = "0.1.0"
-description = "Default template for PDM package"
-authors = [
-    {name = "", email = ""},
-]
-dependencies = [
-    "mkdocs-material>=9.5.41",
-    "mkdocs-glightbox>=0.4.0",
-]
-requires-python = "==3.12.*"
+description = "Chanel and Nicholas' Blog"
 readme = "README.md"
-license = {text = "MIT"}
-
-
-[tool.pdm]
-distribution = false
-
-[tool.pdm.scripts]
-start = "mkdocs serve"
-build = "mkdocs build"
+requires-python = ">=3.12"
+dependencies = [
+    "mkdocs-glightbox>=0.4.0",
+    "mkdocs-material>=9.5.42",
+]
