renable link check, add renovate, add test.yml

--- a/.github/workflows/link-check.yaml
+++ b/.github/workflows/link-check.yaml
@@ -2,9 +2,9 @@ name: Check Markdown links
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   # Run weekly at 00:00 on Sunday
-  #   - cron: "0 0 * * 0"
+  schedule:
+    # Run weekly at 00:00 on Sunday
+    - cron: "0 0 * * 0"
 
 jobs:
   markdown-link-check:
@@ -16,7 +16,7 @@ jobs:
           use-quiet-mode: "yes"
           use-verbose-mode: "yes"
           folder-path: "docs"
-      
+
       - name: Notify telegram on failure
         env:
           BOT_TOKEN: ${{secrets.BOT_TOKEN}}
@@ -25,4 +25,3 @@ jobs:
         run: |
           curl -X POST --data-urlencode "chat_id=$CHAT_ID" -d "parse_mode=Markdown" --data-urlencode "text=*chanel.nicholaslyz.com*
           Link Checker: Bad links found (refer to Github Actions log)" "https://api.telegram.org/bot$BOT_TOKEN/sendMessage"
-          
